# powdrr-lift

./: .gitignore  AGENTS.md  INSTALLATION_SUMMARY.md  Makefile  OPENSENSE.md  QUICK_REFERENCE.md  README.md  SETUP_NOTES.md  opencode.json  parse_change_log.py  pyproject.toml  setup.py  software_development_entity_taxonomy.md
.github/workflows/: ci.yml
change_log_parser/: __init__.py
docs/architecture/: architecture-specification.yaml
docs/blog/: making-coding-agents-operate-like-professionals.md
docs/changelogs/: PR-12-changelog.yaml  PR-13-changelog.yaml  (+31 more)
scripts/: create-worktree.sh  install-skills.sh
skill-definitions/: review-architecture.json  review-architeture.json  review-system.json  specify-a-feature.json  specify-architecture.json  specify-implementation.json  specify-prs.json  specify-system.json
templates/: specify-a-feature.json
tests/: test_architecture_specification.py  test_blame_view.py  test_change_log_template.py  test_change_log_validation.py  test_changelog_index.py  test_cli.py  test_code_index.py  test_codebase_state.py  test_current_state_specification.py  test_edit_context.py  test_entity_context.py  test_entity_taxonomy.py  test_feature_planning_specification.py  test_implementation_specification.py  test_mcp_server.py  test_openai_proxy.py  test_parse_change_log.py  test_plan_diff_specification.py  test_pr_specification.py  test_skill_specification.py  test_start_planning_feature.py  test_system_specification.py  test_workflow_chat_agent.py  test_workflow_task_specification.py  test_workflow_template_specification.py
(+79 files in other folders)
