[project]
name = "powdrr-lift"
version = "0.1.0"
description = "Parse structured change logs."
readme = "README.md"
authors = [
    { name = "Greg Fee", email = "fee.gregory@yahoo.com" }
]
requires-python = ">=3.12"
dependencies = ["PyYAML>=6.0.2", "mcp>=1.0.0"]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.3",
    "ruff>=0.8",
    "types-PyYAML>=6.0.12",
]

[project.scripts]
changelog = "powdrr_lift.cli:main"
powdrr-lift = "powdrr_lift.cli:main"
powdrr-lift-mcp = "powdrr_lift.mcp_server:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
